Fix alignment bug: align life course personappearances near top, instead of stretching

--- a/src/assets/styling/life-course-page.scss
+++ b/src/assets/styling/life-course-page.scss
@@ -1,5 +1,6 @@
 .lls-life-course-source-container {
   display: flex;
+  align-items: flex-start;
 }
 
 .lls-life-course-source-container__source-list {
